[gd_scene load_steps=11 format=3 uid="uid://cxdo304nurtm6"]

[ext_resource type="Theme" uid="uid://cjwibc6a6kroj" path="res://resources/themes/main.tres" id="1_bputy"]
[ext_resource type="Script" path="res://display_scenes/lesson_menu.gd" id="2_eckjl"]
[ext_resource type="Texture2D" uid="uid://y7sjb067i3g0" path="res://resources/images/bg/BG1.png" id="2_xpm26"]
[ext_resource type="Texture2D" uid="uid://cmhxxjuv0vk34" path="res://resources/images/malkuth/1.png" id="3_pa42q"]
[ext_resource type="FontFile" uid="uid://dfsoeknv4d0v4" path="res://resources/fonts/LemonMilkitalic.otf" id="4_8pr76"]
[ext_resource type="PackedScene" uid="uid://cl8uwe21hwh64" path="res://object_scenes/bgm_player.tscn" id="5_csaij"]
[ext_resource type="Texture2D" uid="uid://c42gqb5fgqmdp" path="res://resources/images/9patch.png" id="6_im73c"]
[ext_resource type="PackedScene" uid="uid://bthyjx2tbvt7y" path="res://object_scenes/bgm_toggle.tscn" id="6_n2eh3"]
[ext_resource type="PackedScene" uid="uid://djyc1djrujk8k" path="res://object_scenes/back_button.tscn" id="7_51cc0"]
[ext_resource type="Texture2D" uid="uid://wr5fx08t25j4" path="res://icon.png" id="10_rpmdk"]

[node name="lesson_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_bputy")
script = ExtResource("2_eckjl")

[node name="bg" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_xpm26")

[node name="malkuth" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -596.0
offset_top = -605.0
offset_right = -363.0
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("3_pa42q")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -325.0
offset_right = 325.0
offset_bottom = 665.0
grow_horizontal = 2
alignment = 1
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(1, 0.466667, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_8pr76")
theme_override_font_sizes/font_size = 60
text = "Class List
"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(650, 0)
layout_mode = 2
texture = ExtResource("6_im73c")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/TextureRect/MarginContainer"]
custom_minimum_size = Vector2(550, 300)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TextureRect/MarginContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TextureRect/MarginContainer/ScrollContainer/MarginContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20
alignment = 1

[node name="class_1" type="VBoxContainer" parent="VBoxContainer/TextureRect/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="title_container" type="HBoxContainer" parent="VBoxContainer/TextureRect/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/class_1"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="title" type="Label" parent="VBoxContainer/TextureRect/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/class_1/title_container"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "1st Class
"

[node name="lesson_1" type="Label" parent="VBoxContainer/TextureRect/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/class_1/title_container" groups=["new_indicator"]]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.823529, 0.588235, 1)
theme_override_colors/font_outline_color = Color(0.639216, 0.266667, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("4_8pr76")
theme_override_font_sizes/font_size = 20
text = "NEW"
horizontal_alignment = 2
vertical_alignment = 1

[node name="subtitle" type="Label" parent="VBoxContainer/TextureRect/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/class_1"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Simple Present Tense Sentence"
autowrap_mode = 3

[node name="button_margin" type="MarginContainer" parent="VBoxContainer/TextureRect/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/class_1"]
layout_mode = 2
theme_override_constants/margin_right = 100

[node name="lesson_1" type="Button" parent="VBoxContainer/TextureRect/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/class_1/button_margin" groups=["start_button"]]
layout_mode = 2
mouse_filter = 1
text = "Start the Class"

[node name="class_2" type="VBoxContainer" parent="VBoxContainer/TextureRect/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="title_container" type="HBoxContainer" parent="VBoxContainer/TextureRect/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/class_2"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="title" type="Label" parent="VBoxContainer/TextureRect/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/class_2/title_container"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "2nd Class"

[node name="lesson_2" type="Label" parent="VBoxContainer/TextureRect/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/class_2/title_container" groups=["new_indicator"]]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(1, 0.823529, 0.588235, 1)
theme_override_colors/font_outline_color = Color(0.639216, 0.266667, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("4_8pr76")
theme_override_font_sizes/font_size = 20
text = "NEW"
horizontal_alignment = 2
vertical_alignment = 1

[node name="subtitle" type="Label" parent="VBoxContainer/TextureRect/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/class_2"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "+S in Simple Present Tense"
autowrap_mode = 3

[node name="button_margin" type="MarginContainer" parent="VBoxContainer/TextureRect/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/class_2"]
layout_mode = 2
theme_override_constants/margin_right = 100

[node name="lesson_2" type="Button" parent="VBoxContainer/TextureRect/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/class_2/button_margin" groups=["start_button"]]
layout_mode = 2
mouse_filter = 1
text = "Start the Class"

[node name="class_3" type="VBoxContainer" parent="VBoxContainer/TextureRect/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="title_container" type="HBoxContainer" parent="VBoxContainer/TextureRect/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/class_3"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="title" type="Label" parent="VBoxContainer/TextureRect/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/class_3/title_container"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "3rd Class"

[node name="lesson_3" type="Label" parent="VBoxContainer/TextureRect/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/class_3/title_container" groups=["new_indicator"]]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.823529, 0.588235, 1)
theme_override_colors/font_outline_color = Color(0.639216, 0.266667, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("4_8pr76")
theme_override_font_sizes/font_size = 20
text = "NEW"
horizontal_alignment = 2
vertical_alignment = 1

[node name="subtitle" type="Label" parent="VBoxContainer/TextureRect/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/class_3"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Adverb and Adverb of Time"
autowrap_mode = 3

[node name="button_margin" type="MarginContainer" parent="VBoxContainer/TextureRect/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/class_3"]
layout_mode = 2
theme_override_constants/margin_right = 100

[node name="lesson_3" type="Button" parent="VBoxContainer/TextureRect/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/class_3/button_margin" groups=["start_button"]]
layout_mode = 2
mouse_filter = 1
text = "Start the Class"

[node name="class_4" type="VBoxContainer" parent="VBoxContainer/TextureRect/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="title_container" type="HBoxContainer" parent="VBoxContainer/TextureRect/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/class_4"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="title" type="Label" parent="VBoxContainer/TextureRect/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/class_4/title_container"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "4th Class"

[node name="lesson_4" type="Label" parent="VBoxContainer/TextureRect/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/class_4/title_container" groups=["new_indicator"]]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.823529, 0.588235, 1)
theme_override_colors/font_outline_color = Color(0.639216, 0.266667, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("4_8pr76")
theme_override_font_sizes/font_size = 20
text = "NEW"
horizontal_alignment = 2
vertical_alignment = 1

[node name="subtitle" type="Label" parent="VBoxContainer/TextureRect/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/class_4"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Adverb of Place"
autowrap_mode = 3

[node name="button_margin" type="MarginContainer" parent="VBoxContainer/TextureRect/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/class_4"]
layout_mode = 2
theme_override_constants/margin_right = 100

[node name="lesson_4" type="Button" parent="VBoxContainer/TextureRect/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/class_4/button_margin" groups=["start_button"]]
layout_mode = 2
mouse_filter = 1
text = "Start the Class"

[node name="class_5" type="VBoxContainer" parent="VBoxContainer/TextureRect/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="title_container" type="HBoxContainer" parent="VBoxContainer/TextureRect/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/class_5"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="title" type="Label" parent="VBoxContainer/TextureRect/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/class_5/title_container"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "5th Class"

[node name="lesson_5" type="Label" parent="VBoxContainer/TextureRect/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/class_5/title_container" groups=["new_indicator"]]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.823529, 0.588235, 1)
theme_override_colors/font_outline_color = Color(0.639216, 0.266667, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("4_8pr76")
theme_override_font_sizes/font_size = 20
text = "NEW"
horizontal_alignment = 2
vertical_alignment = 1

[node name="subtitle" type="Label" parent="VBoxContainer/TextureRect/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/class_5"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Adverb of Frequency"
autowrap_mode = 3

[node name="button_margin" type="MarginContainer" parent="VBoxContainer/TextureRect/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/class_5"]
layout_mode = 2
theme_override_constants/margin_right = 100

[node name="lesson_5" type="Button" parent="VBoxContainer/TextureRect/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/class_5/button_margin" groups=["start_button"]]
layout_mode = 2
mouse_filter = 1
text = "Start the Class"

[node name="bgm_player" parent="." instance=ExtResource("5_csaij")]

[node name="bgm_toggle" parent="." instance=ExtResource("6_n2eh3")]
layout_mode = 1
offset_left = -104.0
offset_top = 27.0
offset_right = -40.0
offset_bottom = 91.0

[node name="back_button" parent="." instance=ExtResource("7_51cc0")]
layout_mode = 0
offset_left = 50.0
offset_top = 40.0
offset_right = 178.0
offset_bottom = 168.0
target_scene = "start_menu"

[node name="unlocker" type="TextureButton" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -83.0
offset_top = -94.0
offset_right = -19.0
offset_bottom = -30.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("10_rpmdk")
ignore_texture_size = true
stretch_mode = 0

[connection signal="toggled" from="bgm_toggle" to="bgm_player" method="_on_bgm_toggle_toggled"]
[connection signal="pressed" from="unlocker" to="." method="_on_unlocker_pressed"]
